added appointment example
